--- a/index.html
+++ b/index.html
@@ -21,6 +21,35 @@
         </a>
     </div>
 
+    <main>
+
+      <h1>Your Account</h1>
+
+      <form action="" method="post">
+
+        <nav>
+          <a href="#0" class="active">Sign In</a>
+          <a href="#0">Create Account</a>
+        </nav>
+
+        <div class="form-field">
+          <label for="email">Email Address</label>
+          <input type="email" id="email" name="email">
+        </div>
+
+        <div class="form-field">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password">
+        </div>
+
+        <input type="submit" value="Sign In" class="button">
+
+      </form>
+
+      <a href="#0" class="forgot-password">Forgot your password?</a>
+
+    </main>
+
   <section id="contact">
     <div class="overlay">
       <div class="containers">
