--- a/index.html
+++ b/index.html
@@ -10,57 +10,58 @@
 <body>
 
   <div class="my_social">
-      <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
-          <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
-        </a>
-      <a href="https://stewilondanga.github.io/" class="social">
-          <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
-        </a>
-      <a href="https://twitter.com/stew_ilondanga" class="social">
-          <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
-        </a>
-    </div>
+    <a href="https://www.linkedin.com/in/stewart-ilondanga-336b2743/" class="social">
+      <img src="https://i.imgsafe.org/85/857cb1a42e.png" alt="linkedin"></img>
+    </a>
+    <a href="https://stewilondanga.github.io/" class="social">
+      <img src="https://i.imgsafe.org/8d/8d745a5c82.png" alt="github"></img>
+    </a>
+    <a href="https://twitter.com/stew_ilondanga" class="social">
+      <img src="https://i.imgsafe.org/43/431dd07874.png" alt="twitter"></img>
+    </a>
+  </div>
 
-    <main>
+  <main>
 
-      <h1>Your Account</h1>
+    <h1>Your Account</h1>
 
-      <form action="" method="post">
+    <form action="" method="post">
 
-        <nav>
-          <a href="#0" class="active">Sign In</a>
-          <a href="#0">Create Account</a>
-        </nav>
+      <nav>
+        <a href="#0" class="active">Sign In</a>
+        <a href="#0">Create Account</a>
+      </nav>
 
-        <div class="form-field">
-          <label for="email">Email Address</label>
-          <input type="email" id="email" name="email">
-        </div>
+      <div class="form-field">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email">
+      </div>
 
-        <div class="form-field">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password">
-        </div>
+      <div class="form-field">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password">
+      </div>
 
-        <input type="submit" value="Sign In" class="button">
+      <input type="submit" value="Sign In" class="button">
 
-      </form>
+    </form>
 
-      <a href="#0" class="forgot-password">Forgot your password?</a>
+    <a href="#0" class="forgot-password">Forgot your password?</a>
 
-    </main>
+  </main>
 
   <section id="contact">
     <div class="overlay">
       <div class="containers">
 
         <h1>
-<script>
-with(new Date)c=-new Date(y=getFullYear(),m=getMonth()).getDay(x=new Date(y,++m,0).getDate(b=-1))
-h='<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 '+' '+y+'/'+m+'<tr>'+'SuMoTuWeThFrSa'.replace(/(..)/g,'<th>$1')
-while((b++>5?b=0:b)|c<x)h+=(b?'':'<tr>')+'<td>'+(++c<1|c>x?'-':c);document.write(h+'</table>')
-</script>
-</h1>
+          <script>
+            with(new Date) c = -new Date(y = getFullYear(), m = getMonth()).getDay(x = new Date(y, ++m, 0).getDate(b = -1))
+            h = '<table class="cal"><caption> <em>Stewart ilondanga</em> &#169 ' + ' ' + y + '/' + m + '<tr>' + 'SuMoTuWeThFrSa'.replace(/(..)/g, '<th>$1')
+            while ((b++ > 5 ? b = 0 : b) | c < x) h += (b ? '' : '<tr>') + '<td>' + (++c < 1 | c > x ? '-' : c);
+            document.write(h + '</table>')
+          </script>
+        </h1>
 
       </div>
     </div>
